min-stability : stable now

--- a/composer.json
+++ b/composer.json
@@ -17,5 +17,5 @@
             "email": "programmerrezwan@gmail.com"
         }
     ],
-    "minimum-stability": "dev"
+    "minimum-stability": "stable"
 }
