--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,9 @@
 {
     "name": "rez1pro/lara-paypal",
-    "description": "payment with paypal into laravel",
-    "type": "composer-plugin",
+    "description": "A Laravel PayPal integration package",
+    "type": "library",
     "require": {
+        "php": "^7.4|^8.0",
         "guzzlehttp/guzzle": "^7.8"
     },
     "license": "MIT",
@@ -13,9 +14,20 @@
     },
     "authors": [
         {
-            "name": "rez1pro",
+            "name": "Md. Rezwan Hossain Sajib",
             "email": "programmerrezwan@gmail.com"
         }
     ],
-    "minimum-stability": "stable"
+    "extra": {
+        "laravel": {
+            "providers": [
+                "Rez1pro\\LaraPaypal\\LaraPaypalServiceProvider"
+            ],
+            "aliases": {
+                "LaraPaypal": "Rez1pro\\LaraPaypal\\Facades\\LaraPaypal"
+            }
+        }
+    },
+    "minimum-stability": "dev",
+    "prefer-stable": true
 }
