--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "description": "A Laravel PayPal integration package",
     "type": "composer-plugin",
     "require": {
-        "php": "^7.4|^8.0",
+        "php": "^8.1",
         "guzzlehttp/guzzle": "^7.8"
     },
     "license": "MIT",
@@ -18,6 +18,5 @@
             "email": "programmerrezwan@gmail.com"
         }
     ],
-    "minimum-stability": "dev",
-    "prefer-stable": true
+    "minimum-stability": "stable"
 }
