--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "rez1pro/lara-paypal",
     "description": "A Laravel PayPal integration package",
-    "type": "composer-plugin",
+    "type": "library",
     "require": {
         "php": "^8.1",
         "guzzlehttp/guzzle": "^7.8"
@@ -18,5 +18,12 @@
             "email": "programmerrezwan@gmail.com"
         }
     ],
+    "extra": {
+        "laravel": {
+            "providers": [
+                "Rez1pro\\LaraPaypal\\LaraPaypalServiceProvider"
+            ]
+        }
+    },
     "minimum-stability": "stable"
 }
